--- a/src/css/common.css
+++ b/src/css/common.css
@@ -22,3 +22,14 @@ button {
   padding: 8px 12px;
   cursor: pointer;
 }
+
+.gallery {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  list-style: none;
+}
+
+.gallery-img {
+  width: 320px;
+}
